[project]
name = "nmdc_schema"
description = "Schema resources for the National Microbiome Data Collaborative (NMDC)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bill Duncan", email = "wdduncan@gmail.com" },
    { name = "Chris Mungall", email = "cjmungall@lbl.gov" },
    { name = "Mark Andrew Miller", email = "MAM@lbl.gov" },
    { name = "Patrick Kalita", email = "pkalita@lbl.gov" },
    { name = "Sujay Patil", email = "spatil@lbl.gov" },
]
keywords = ["NMDC", "schema", "metadata", "microbiome"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/microbiomedata/nmdc-schema"
Documentation = "https://microbiomedata.github.io/nmdc-schema/"
Repository = "https://github.com/microbiomedata/nmdc-schema"
Changelog = "https://github.com/microbiomedata/nmdc-schema/releases"

[project.optional-dependencies]
# Development tools - linters, formatters, testing frameworks
# Install with: poetry install --extras dev
dev = [
    "autopep8>=2.2.0",
    "bandit>=1.7.8",
    "black>=23.1,<25.0",
    "curies>=0.9.0",
    "deptry>=0.23.0",
    "exhaustion-check>=0.1.1",
    "fastjsonschema>=2.20.0",
    "flake8>=7.0.0",
    "isort>=5.13.2",
    "jinja2>=3.1.6",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.0.12",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mkdocs-redirects>=1.2.1",
    "mypy>=1.10.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydocstyle>=6.3.0",
    "pylint>=3.2.2",
    "pyroma>=4.2",
    "pytest>=8.4.2",
    "python-dotenv>=0.21.0",
    "refscan>=0.2.3",
    "requests>=2",
    "ruamel-yaml>=0.18.6",
    "ruff>=0.4.7",
    "schemasheets>=0.4.0",
    "setuptools>=78.1.1",
    "sheets_and_friends>=0.5.0",
    "sparql-burger>=1.0.2",
    "sparql-dataframe>=0.4",
    "sparqlwrapper>=2.0.0",
    "ucumvert>=0.2.2",
    "vulture>=2.11"
]
# Jupyter notebook support - needed to run notebooks in notebooks/
# Install with: poetry install --extras notebooks
notebooks = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0"
]

[tool.poetry]
version = "0.0.0"  # Managed by poetry-dynamic-versioning
packages = [
    { include = "nmdc_schema" }, # this is the package Poetry would have included by default
    { include = "migrators", from = "nmdc_schema" },
    { include = "adapters", from = "nmdc_schema/migrators" },
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
click-log = "^0.4.0"
deprecated = "^1"
jsonschema = "^4"
linkml = "^1.9.5"
linkml-runtime = "^1.9.5"
pyyaml = "^6"
rdflib = "^7.4.0"
# Optional dependencies - all extras are opt-in
# Install with: poetry install --extras dev (or --extras notebooks or --all-extras)
pymongo = {version = "^4.7.2", optional = true}
python-dotenv = {version = "^0.21.0", optional = true}
jupyter = {version = ">=1.0.0", optional = true}
ipython = {version = ">=8.0.0", optional = true}
# Dev dependencies - all marked as optional
autopep8 = {version = "^2.2.0", optional = true}
bandit = {version = "^1.7.8", optional = true}
black = {version = ">=23.1,<25.0", optional = true}
curies = {version = "^0.9.0", optional = true}
deptry = {version = "^0.23.0", optional = true}
exhaustion-check = {version = "^0.1.1", optional = true}
fastjsonschema = {version = "^2.20.0", optional = true}
flake8 = {version = "^7.0.0", optional = true}
isort = {version = "^5.13.2", optional = true}
jinja2 = {version = "^3.1.6", optional = true}
mkdocs = {version = "^1.4.2", optional = true}
mkdocs-material = {version = "^9.0.12", optional = true}
mkdocs-mermaid2-plugin = {version = "^0.6.0", optional = true}
mkdocs-redirects = {version = "^1.2.1", optional = true}
mypy = {version = "^1.10.0", optional = true}
pandas = {version = "^2.2.3", optional = true}
psycopg2-binary = {version = "^2.9.10", optional = true}
pydocstyle = {version = "^6.3.0", optional = true}
pylint = {version = "^3.2.2", optional = true}
pyroma = {version = "^4.2", optional = true}
pytest = {version = "^8.4.2", optional = true}
refscan = {version = "^0.2.3", optional = true}
requests = {version = "^2", optional = true}
ruamel-yaml = {version = "^0.18.6", optional = true}
ruff = {version = "^0.4.7", optional = true}
schemasheets = {version = "^0.4.0", optional = true}
setuptools = {version = "^78.1.1", optional = true}
sheets_and_friends = {version = "^0.5.0", optional = true}
sparql-burger = {version = "^1.0.2", optional = true}
sparql-dataframe = {version = "^0.4", optional = true}
sparqlwrapper = {version = "^2.0.0", optional = true}
ucumvert = {version = "^0.2.2", optional = true}
vulture = {version = "^2.11", optional = true}

[tool.poetry.extras]
# Map extras to optional dependencies
dev = [
    "autopep8", "bandit", "black", "curies", "deptry", "exhaustion-check",
    "fastjsonschema", "flake8", "isort", "jinja2", "mkdocs", "mkdocs-material",
    "mkdocs-mermaid2-plugin", "mkdocs-redirects", "mypy", "pandas", "psycopg2-binary",
    "pydocstyle", "pylint", "pyroma", "pytest", "python-dotenv", "refscan", "requests",
    "ruamel-yaml", "ruff", "schemasheets", "setuptools", "sheets_and_friends",
    "sparql-burger", "sparql-dataframe", "sparqlwrapper", "ucumvert", "vulture"
]
notebooks = ["jupyter", "ipython"]

[tool.poetry-dynamic-versioning]
# We need poetry-dynamic-versioning to update the version in the src schema file,
# then generate project artifacts from that schema with the real version populated,
# and then perform any build or publish actions. Since this requires running
# `poetry dynamic-versioning` manually before `poetry build`, we set enable = false.
enable = false
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "src/schema/nmdc.yaml"
]
patterns = [
    "(^\\s*__version__\\s*(?::.*?)?=\\s*['\\\"])[^'\\\"]*(['\\\"])",
    "(^version:\\s*['\\\"]?)[^'\\\"]*?(['\\\"]?)$"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

# For CLI script development guidelines, see CONTRIBUTING.md section "CLI Script Development Guidelines"

[project.scripts]
analyze-mentions-of-ids = "src.scripts.analyze_mentions_of_ids:main"
anyuri-strings-to-iris = "src.scripts.anyuri_strings_to_iris:expand_curies"
check-examples-class-coverage = "src.scripts.check_examples_class_coverage:main"
class-instantiation-counts = "src.scripts.class_instantiation_counts:process_data"
create-migrator = 'nmdc_schema.migrators.cli.create_migrator:create_migrator'
run-migrator = 'nmdc_schema.migrators.cli.run_migrator:run_migrator'
database-to-json-list-files = "src.scripts.database_to_json_list_files:split_yaml_to_json"
date-created-blank-node = "src.scripts.date_created_blank_node:print_timestamp" # prints a RDF Turtle string, for copying into other RDF/TTL files. may need some parameterization.
fetch-nmdc-schema = "nmdc_schema.nmdc_data:get_nmdc_jsonschema" # todo recheck
get-study-id-from-filename = "src.scripts.get_study_id_from_filename:main" # todo not used in makefiles
get-study-related-records = "src.scripts.nmdc_database_tools:cli" # todo recheck
interleave-yaml = "src.scripts.interleave_yaml:process_yaml" # todo recheck
migration-recursion = 'nmdc_schema.migration_recursion:main'
nmdc-data = "nmdc_schema.nmdc_data:cli" # todo recheck
nmdc-ncbi-mapping = "src.scripts.ncbi_nmdc_exact_term_matching:cli"
nmdc-version = "nmdc_schema.nmdc_version:cli" # todo recheck
pure-export = "src.scripts.dump_single_modality:cli"
report-biosamples-per-study = "src.scripts.report_biosamples_per_study:query_biosamples"
report-usages = "src.scripts.report_usages:display_slot_usage"
schema-pattern-linting = "src.scripts.schema_pattern_linting:main"
schema-view-relation-graph = "src.scripts.schema_view_relation_graph:cli"
scrutinize-elements = "src.scripts.scrutinize_elements:process_schema_elements"
slot-range-type-reporter = "src.scripts.slot_range_type_reporter:cli"
# Units analysis CLI tools (consolidated in units/ directory)
units-schema-extract = "units.scripts.schema_extract_preferred_units:main"
units-schema-convert = "units.scripts.schema_convert_to_ucum:main"
units-schema-generate = "units.scripts.schema_generate_yq_commands:main"
units-testdata-extract = "units.scripts.testdata_extract_quantity_values:main"
units-testdata-check = "units.scripts.testdata_check_has_unit:main"
units-ucum-validate = "units.scripts.ucum_validate_units:main"
units-mongodb-analyze = "units.scripts.mongodb_analyze_units:main"
units-schema-extract-slot-unit-pairs = "units.scripts.schema_expand_storage_units:main"

[tool.deptry]
extend_exclude = [
    "nmdc_schema/nmdc.py",
    "nmdc_schema/nmdc-pydantic.py"
]
# NOTE: nmdc.py and nmdc-pydantic.py are generated files that import transitive dependencies (e.g., jsonasobj2).
# DEP003 warnings from generated files are expected and can be ignored.

# Ignore optional dependencies (dev tools, notebooks) that are not imported by code
# Also ignore deps used in generated files (nmdc.py, nmdc-pydantic.py) that we exclude from scanning
# DEP002 = "defined as a dependency but not used in the codebase"
per_rule_ignores = { DEP002 = [
    "rdflib",  # Used in excluded generated file nmdc.py
    "autopep8", "bandit", "black", "curies", "deptry", "exhaustion-check",
    "fastjsonschema", "flake8", "isort", "jinja2", "mkdocs", "mkdocs-material",
    "mkdocs-mermaid2-plugin", "mkdocs-redirects", "mypy", "pandas", "psycopg2-binary",
    "pydocstyle", "pylint", "pyroma", "pytest", "python-dotenv", "refscan", "requests",
    "ruamel-yaml", "ruff", "schemasheets", "setuptools", "sheets_and_friends",
    "sparql-burger", "sparql-dataframe", "sparqlwrapper", "ucumvert", "vulture",
    "jupyter", "ipython"
] }
