[project]
name = "nmdc_schema"
dynamic = ["version"]
description = "Schema resources for the National Microbiome Data Collaborative (NMDC)"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Bill Duncan", email = "wdduncan@gmail.com" },
    { name = "Chris Mungall", email = "cjmungall@lbl.gov" },
    { name = "Mark Andrew Miller", email = "MAM@lbl.gov" },
    { name = "Patrick Kalita", email = "pkalita@lbl.gov" },
    { name = "Sujay Patil", email = "spatil@lbl.gov" },
]
maintainers = [
    { name = "National Microbiome Data Collaborative", email = "support@microbiomedata.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["NMDC", "schema", "metadata", "microbiome"]

# Upper bound policy (PR #2888): 1.0+ packages cap at next major, pre-1.0 at next minor.
dependencies = [
    # Capped at <8.2 to match linkml 1.9.4–1.10.0's click constraint.
    # Can widen to <9.0.0 once linkml releases with the cap removed. See #2985.
    "click>=8.0.0,<8.2",
    "click-log>=0.4.0,<0.5.0",
    "deprecated>=1.3.1,<2.0.0",
    # (GHSA-65pc-fj4g-8rjx bypass of CVE-2024-3651)
    "idna>=3.18,<4.0.0",
    "jsonasobj2>=1.0.0,<2.0.0",
    "jsonschema>=4.26.0,<5.0.0",
    # linkml and linkml-runtime versions must be paired — e.g. runtime
    # 1.10.0 removed Format.JSON which linkml 1.9.x references. See #2985.
    "linkml>=1.9.0,<2.0.0",
    "linkml-runtime>=1.9.0,<2.0.0",
    "python-dotenv>=0.21.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "rdflib>=6.2.0,<8.0.0",
    "requests>=2.34.2,<3.0.0",
    # Transitive deps pinned directly to ensure users get security fixes
    # (GHSA-qccp-gfcp-xxvc CVE-2026-44431, GHSA-mf9v-mfxr-j63j CVE-2026-44432)
    "urllib3>=2.7.0,<3.0.0",
    "pymdown-extensions>=10.21.3,<11.0.0",
    "pymongo>=4.17.0,<5.0.0",
]

[project.urls]
Homepage = "https://microbiomedata.github.io/nmdc-schema/"
Documentation = "https://microbiomedata.github.io/nmdc-schema/"
Repository = "https://github.com/microbiomedata/nmdc-schema"
Issues = "https://github.com/microbiomedata/nmdc-schema/issues"

# scripts should have click clis
# click parameters/options should be written out with hyphens
# click parameters/options should use consistent names
# only package-backed, stable CLIs should be listed in project.scripts
# prefer invoking repo-local scripts from Makefiles via `poetry run python src/scripts/<name>.py`
# use underscores to delimit file name
# use hyphens to delimit CLI alias
# scripts/aliases should be illustrated in a Makefile
# Makefile targets should make use of $< etc for input and $@ for output
# input and output files should use hyphens as delimiters in their names
# check usages of these features in other NMDC code before changing
# be intentional about output location: prefer destination by purpose (`docs/`, `local/`, `project/`, package artifacts), not a blanket `assets/` default
# cli entry points should probably all be main or cli unless there's a compelling reason to do otherwise

[project.scripts]
create-migrator = "nmdc_schema.migrators.cli.create_migrator:create_migrator"
run-migrator = "nmdc_schema.migrators.cli.run_migrator:run_migrator"
migration-recursion = "nmdc_schema.migration_recursion:main"
pure-export = "nmdc_schema.dump_single_modality:cli"
# Units analysis uses yq queries in units/Makefile (Python scripts removed)

[dependency-groups]
dev = [
    # ruff replaces autopep8/black (formatting), flake8 (pyflakes+pycodestyle),
    # isort (import order), bandit (the S security rules), and pydocstyle (D).
    # See [tool.ruff] below. mypy (types), pylint, vulture, and pyroma are kept
    # because ruff does not (yet) fully cover them.
    "curies>=0.13.11,<1.0.0",
    "defusedxml>=0.7.1,<1.0.0",  # hardened XML parsing in src/scripts/ncbi_nmdc_exact_term_matching.py
    "exhaustion-check>=0.1.1,<0.2.0",  # for exhaustion-check, pretty-sort-yaml (also get-first-of-first)
    "fastjsonschema>=2.20.0,<3.0.0",
    # linkml-store[llm] was a dependency but its llm → sqlite-utils chain
    # requires click>=8.3.1, which conflicts with linkml's click<8.2 cap.
    # Ontology alignment scripts (#2909, #2910) that need embeddings should
    # install it separately: poetry run pip install 'linkml-store[llm]>=0.3.0,<0.4.0'
    # The [llm] extra can return once linkml drops the click cap. See #2985.
    "linkml-store>=0.3.2,<0.4.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material>=9.7.6,<10.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0,<2.0.0",
    "mkdocs-redirects>=1.2.3,<2.0.0",
    "mypy>=1.20.2,<2.0.0",
    "oaklib>=0.6.23,<1.0.0",
    "pandas>=2.2.3,<4.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pylint>=3.2.2,<5.0.0",
    "pyroma>=4.2,<6.0",
    "pytest>=8.4.2,<10.0.0",
    # We use `refscan` to generate diagrams of inter-collection relationships
    # and diagrams of inter-class relationships.
    # Reference: https://github.com/microbiomedata/refscan
    "refscan>=0.2.3,<0.5.0",
    "ruff>=0.15.16,<1.0.0",
    "schemasheets>=0.1.24,<0.5.0",
    "sheets-and-friends>=0.5.0,<0.6.0",  # for do_shuttle (and possibly more)
    "ucumvert>=0.2.2,<0.4.0",
    "vulture>=2.16,<3.0.0",
]
deps = [
    "deptry>=0.25.1,<1.0.0",
]

[tool.poetry]
version = "0.0.0"
packages = [
    { include = "nmdc_schema" },  # this is the package Poetry would have included by default
    { include = "migrators", from = "nmdc_schema" },
    { include = "adapters", from = "nmdc_schema/migrators" },
]

[tool.poetry-dynamic-versioning]
# We need poetry-dynamic-versioning to update the version in the src schema file,
# then generate project artifacts from that schema with the real version populated,
# and then perform any build or publish actions. Since this requires running
# `poetry dynamic-versioning` manually before `poetry build`, we set enable = false.
enable = false
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "src/schema/nmdc.yaml"
]
patterns = [
    "(^\\s*__version__\\s*(?::.*?)?=\\s*['\\\"])[^'\\\"]*(['\\\"])",
    "(^version:\\s*['\\\"]?)[^'\\\"]*?(['\\\"]?)$"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
# Only run tests in tests/ directory to match original unittest discover behavior
# (excludes MongoDB integration tests and other tests outside tests/)
# Module independence is checked by check_schema_self_containment.py instead
testpaths = ["tests"]

# ruff is the single linter + formatter, replacing black/autopep8 (format),
# flake8 (E/F/W), isort (I), bandit (S security), and pydocstyle (D).
[tool.ruff]
# Generated artifacts, scratch notebooks, and the frozen released migrator
# partials are not hand-maintained, so they are not linted.
extend-exclude = [
    "nmdc_schema/nmdc.py",
    "nmdc_schema/nmdc_pydantic.py",
    "nmdc_schema/nmdc_materialized_patterns.yaml",
    "notebooks",
    "nmdc_schema/migrators/partials",
]

[tool.ruff.lint]
# Start with the high-signal, low-churn rules as a blocking gate (pyflakes).
# Security rules (S) are run as a separate, non-blocking CI step until the
# known src/scripts findings (#3164) are cleared, then folded in here.
# Import order (I), bugbear (B), and pyupgrade (UP) are deferred to a separate
# modernization pass because they would rewrite a large amount of code at once.
select = ["F"]

[tool.ruff.lint.per-file-ignores]
# Asserts are idiomatic in tests; bandit's B101 / ruff's S101 are noise there.
"tests/**" = ["S101"]

[tool.deptry]
extend_exclude = [
    "nmdc_schema/nmdc_pydantic.py"
]
# These are transitive dependencies but we pin them directly
# to ensure users get security fixes from Dependabot alerts
per_rule_ignores = {DEP002 = ["idna", "pymdown-extensions", "urllib3"]}

# linkml 1.10.0+ monorepo includes linkml-runtime
[tool.deptry.package_module_name_map]
linkml = ["linkml", "linkml_runtime"]
